--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
     "grunt-contrib-nodeunit": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "moment": "^2.12.0"
+  }
 }
