--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-nodeunit": "^1.0.0",
-    "grunt-contrib-uglify": "^1.0.0"
+    "grunt-contrib-uglify": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0"
   },
   "dependencies": {
     "jquery": "^1.12.2",
