--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "daiad-charts",
   "version": "1.0.0",
   "description": "DAIAD/Charts",
-  "main": "main.js",
+  "main": "js/main.js",
   "scripts": {
     "test": "test.js"
   },
@@ -12,8 +12,15 @@
   "author": "alexakis@imis.athena-innovation.gr",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-2": "^6.13.0",
+    "babelify": "^7.3.0",
+    "browserify-shim": "^3.8.12",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
@@ -23,7 +30,19 @@
     "grunt-contrib-watch": "^1.0.0"
   },
   "dependencies": {
-    "jquery": "^1.12.2",
+    "jquery": "^1.12.4",
+    "jquery-flot": "^0.8.3",
     "moment": "^2.12.0"
+  },
+  "browserify": {
+    "transform": [
+      "babelify",
+      "browserify-shim"
+    ]
+  },
+  "browser": {},
+  "browserify-shim": {
+    "jquery": "global:jQuery",
+    "daiad": "global:daiad"
   }
 }
