--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-2": "^6.13.0",
     "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
     "browserify-shim": "^3.8.12",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
@@ -27,7 +28,9 @@
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-nodeunit": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-jsdoc": "^2.1.0",
+    "jsdoc": "^3.4.2"
   },
   "dependencies": {
     "jquery": "^1.12.4",
